2000-01-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-except.cc (do_catch_code): Unwind-protect buffer_error_messages.
	Be sure to run all unwind-protects before returning.
	(tree_try_catch_command::eval): Add do_catch_code cleanup function
	to unwind-protect stack before resetting buffer_error_messages.
	Use unwind-protect to save and restore buffer_error_messages.
	If there is no catch code, discard the cleanup function and run
	the unwind-protect for buffer_error_messages.

	* error.cc (bind_global_error_variable): Avoid dereferencing
	error_message_buffer if it is NULL.

	* parse.y (evaluating_function_body): New global flag.
	* ov-usr-fcn.cc (octave_user_function::do_index_op):
	Protect and set it here.
	* parse.y (make_break_command, make_return_command): Check it here.

	* error.cc (warning_state): New global flag.
	(warning): Set it here.
	* lex.l (reset_parser): Clear it here.
	* parse.y (fold): Check it here.

2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-walk.h (tree_walker::visit_do_until_command): New pure virtual.
	* pt-pr-code.cc (tree_print_code::visit_do_until_command):
	New function.
	* pt-loop.h (tree_do_until_command): New class.
	(tree_while_command::expr, tree_while_command::list):
	Now protected instead of private.
	* parse.y (make_do_until_command): New function.
	(loop_command): Recognize do-until statement.
	(DO, UNTIL): New tokens.

	* input.cc (match_sans_spaces): Require non-blank part of test
	string to match standard string exactly.

2000-01-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.h (scanf_format_elt::char_class): New struct elt.
	Add arg to constructor.
	(scanf_format_elt::special_conversion): New enum.
	* oct-stream.cc (scanf_format_list::add_elt_to_list): New arg,
	char_class.  Pass it to scanf_format_elt constructor.
	(scanf_format_list::scanf_format_list): Create separate list
	elements for whitespace and literal conversions.
	(expand_char_class): New function.